Implemented localization with en and hr locales

--- a/app/translations/locales/en.json
+++ b/app/translations/locales/en.json
@@ -1,5 +1,6 @@
 {
     "authentication": {
+        "login_button": "Login",
         "password": "Password",
         "username": "Username"
     }
