--- a/app/translations/locales/hr.json
+++ b/app/translations/locales/hr.json
@@ -1,5 +1,6 @@
 {
     "authentication": {
+        "login_button": "Prijava",
         "password": "Lozinka",
         "username": "Korisničko ime"
     }
