implemented remember me login option

--- a/app/translations/locales/en.json
+++ b/app/translations/locales/en.json
@@ -2,6 +2,7 @@
     "authentication": {
         "login_button": "Login",
         "password": "Password",
+        "remember_me": "Remember me",
         "username": "Username"
     },
     "dialog": {
