--- a/app/translations/locales/hr.json
+++ b/app/translations/locales/hr.json
@@ -2,6 +2,7 @@
     "authentication": {
         "login_button": "Prijava",
         "password": "Lozinka",
+        "remember_me": "Zapamti me",
         "username": "Korisničko ime"
     },
     "dialog": {
