refactor of login - differentiation between user and admin accounts

--- a/app/translations/locales/en.json
+++ b/app/translations/locales/en.json
@@ -41,6 +41,7 @@
         "drawer_labels": {
             "harbours": "Harbours",
             "logout": "Logout",
+            "messages": "Messages",
             "profile": "My profile",
             "settings": "Settings"
         },
